# mandy

./: .gitignore  CMakeLists.txt  LICENSE  aphex.cc  elastic.prm  material.prm  piezoelectric.prm  step-1-elastic.cc  step-2-piezoelectric.cc  step-4.cc  step-4.prm
include/mandy/: crystal_symmetry.h  crystal_symmetry_group.h  dielectric_tensor.h  elastic_problem.h  elastic_tensor.h  function_tools.h  lattice_tensor.h  matrix_creator.h  piezoelectric_problem.h  piezoelectric_tensor.h  polarelectric_tensor.h  tensor_base.h  vector_creator.h
source/: CMakeLists.txt  dielectric_tensor.cc  elastic_problem.cc  elastic_tensor.cc  function_tools.cc  lattice_tensor.cc  matrix_creator.cc  matrix_creator.inst  piezoelectric_problem.cc  piezoelectric_tensor.cc  polarelectric_tensor.cc  tensor_base.cc  tensor_base.inst  vector_creator.cc  vector_creator.inst
